--- a/ch06/grid/pom.xml
+++ b/ch06/grid/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>opencsv</artifactId>
             <version>5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin</groupId>
+            <artifactId>flow-viritin</artifactId>
+            <version>0.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
