--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
         <module>ch07/routes</module>
         <module>ch07/navigation-lifecycle</module>
         <module>ch07/url-parameters</module>
+        
+        <module>ch08/no-push</module>
+        <module>ch08/with-push</module>
+        <module>ch08/manual-push</module>
+        <module>ch08/thread-experiment</module>
     </modules>
 
 </project>
