--- a/ch06/grid/package.json
+++ b/ch06/grid/package.json
@@ -3,43 +3,46 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "2.3.1",
+      "lit-element": "2.5.1",
       "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-grid": "6.0.1",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "6.0.1",
-      "@vaadin/vaadin-core-shrinkwrap": "19.0.4",
-      "@vaadin/vaadin-upload": "5.0.0",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "3.0.0",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "3.0.0",
-      "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "2.0.0",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "2.0.0",
-      "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "5.0.0",
-      "@vaadin/vaadin-text-field": "3.0.2",
-      "@vaadin/vaadin-menu-bar": "2.0.0",
-      "@vaadin/vaadin-custom-field": "2.0.0",
-      "@vaadin/vaadin-form-layout": "2.3.0",
+      "@vaadin/vaadin-grid": "20.0.0",
+      "@vaadin/vaadin-icons": "20.0.0",
+      "@vaadin/vaadin-split-layout": "20.0.0",
+      "@vaadin/vaadin-combo-box": "20.0.0",
+      "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
+      "@vaadin/vaadin-upload": "20.0.0",
+      "@vaadin/vaadin-dialog": "20.0.0",
+      "@vaadin/vaadin-select": "20.0.0",
+      "@vaadin/vaadin-app-layout": "20.0.0",
+      "@vaadin/vaadin-item": "20.0.0",
+      "@vaadin/vaadin-notification": "20.0.0",
+      "@vaadin/vaadin-progress-bar": "20.0.0",
+      "@vaadin/vaadin-date-time-picker": "20.0.0",
+      "@vaadin/vaadin-ordered-layout": "20.0.0",
+      "@vaadin/vaadin-login": "20.0.0",
+      "@vaadin/vaadin-button": "20.0.0",
+      "@vaadin/vaadin-date-picker": "20.0.0",
+      "@vaadin/vaadin-text-field": "20.0.0",
+      "@vaadin/vaadin-menu-bar": "20.0.0",
+      "@vaadin/vaadin-custom-field": "20.0.0",
+      "@vaadin/vaadin-form-layout": "20.0.0",
       "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-accordion": "1.2.0",
-      "@vaadin/vaadin-list-box": "2.0.0",
-      "@vaadin/vaadin-details": "1.2.0",
-      "@vaadin/vaadin-checkbox": "3.0.0",
+      "@vaadin/vaadin-accordion": "20.0.0",
+      "@vaadin/vaadin-list-box": "20.0.0",
+      "@vaadin/vaadin-details": "20.0.0",
+      "@vaadin/vaadin-checkbox": "20.0.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "3.0.0",
-      "@vaadin/vaadin-avatar": "2.0.2",
-      "@vaadin/vaadin-context-menu": "5.0.0",
-      "@vaadin/vaadin-tabs": "4.0.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
-      "@vaadin/vaadin-lumo-styles": "1.6.1",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-time-picker": "20.0.0",
+      "@vaadin/vaadin-avatar": "20.0.0",
+      "@vaadin/vaadin-context-menu": "20.0.0",
+      "@vaadin/vaadin-tabs": "20.0.0",
+      "@vaadin/vaadin-radio-button": "20.0.0",
+      "@vaadin/vaadin-lumo-styles": "20.0.0",
+      "@vaadin/vaadin-material-styles": "20.0.0",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "lit-html": "1.4.1",
+      "@vaadin/vaadin-messages": "20.0.0"
     },
     "devDependencies": {
       "css-loader": "4.2.1",
@@ -50,67 +53,67 @@
       "lit-css-loader": "0.0.4",
       "loader-utils": "2.0.0",
       "@types/validator": "13.1.0",
-      "lit-element": "2.4.0",
-      "construct-style-sheets-polyfill": "2.4.16",
       "webpack": "4.46.0",
       "ts-loader": "8.0.12",
       "chokidar": "^3.5.0",
-      "typescript": "4.0.3",
+      "typescript": "4.2.3",
       "webpack-dev-server": "3.11.0",
-      "workbox-webpack-plugin": "5.1.4",
+      "workbox-webpack-plugin": "6.1.0",
       "compression-webpack-plugin": "4.0.1",
       "webpack-cli": "3.3.11",
-      "idb": "5.0.6",
-      "lit-html": "1.3.0",
-      "workbox-core": "5.1.4",
+      "workbox-core": "6.1.0",
       "html-webpack-plugin": "4.5.1",
-      "workbox-precaching": "5.1.4",
+      "workbox-precaching": "6.1.0",
       "webpack-manifest-plugin": "3.0.0",
       "webpack-merge": "4.2.2",
-      "extract-loader": "5.1.0"
+      "extract-loader": "5.1.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1"
     },
-    "hash": "1298ded2b0c003a9653da7880b46711b95a040e8fcb625acc979d94b49654696"
+    "hash": "8b6a00fdf0c6c4fafa67fbe291da0949e019fa5220965e1179fa8a4b837c5f09"
   },
   "dependencies": {
-    "lit-element": "2.3.1",
+    "lit-element": "2.5.1",
     "@vaadin/router": "1.7.2",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-grid": "6.0.1",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "6.0.1",
-    "@vaadin/vaadin-core-shrinkwrap": "19.0.4",
-    "@vaadin/vaadin-upload": "5.0.0",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "3.0.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "3.0.0",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-date-time-picker": "2.0.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "2.0.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "5.0.0",
-    "@vaadin/vaadin-text-field": "3.0.2",
-    "@vaadin/vaadin-menu-bar": "2.0.0",
-    "@vaadin/vaadin-custom-field": "2.0.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
+    "@vaadin/vaadin-grid": "20.0.0",
+    "@vaadin/vaadin-icons": "20.0.0",
+    "@vaadin/vaadin-split-layout": "20.0.0",
+    "@vaadin/vaadin-combo-box": "20.0.0",
+    "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
+    "@vaadin/vaadin-upload": "20.0.0",
+    "@vaadin/vaadin-dialog": "20.0.0",
+    "@vaadin/vaadin-select": "20.0.0",
+    "@vaadin/vaadin-app-layout": "20.0.0",
+    "@vaadin/vaadin-item": "20.0.0",
+    "@vaadin/vaadin-notification": "20.0.0",
+    "@vaadin/vaadin-progress-bar": "20.0.0",
+    "@vaadin/vaadin-date-time-picker": "20.0.0",
+    "@vaadin/vaadin-ordered-layout": "20.0.0",
+    "@vaadin/vaadin-login": "20.0.0",
+    "@vaadin/vaadin-button": "20.0.0",
+    "@vaadin/vaadin-date-picker": "20.0.0",
+    "@vaadin/vaadin-text-field": "20.0.0",
+    "@vaadin/vaadin-menu-bar": "20.0.0",
+    "@vaadin/vaadin-custom-field": "20.0.0",
+    "@vaadin/vaadin-form-layout": "20.0.0",
     "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-list-box": "2.0.0",
-    "@vaadin/vaadin-details": "1.2.0",
-    "@vaadin/vaadin-checkbox": "3.0.0",
+    "@vaadin/vaadin-accordion": "20.0.0",
+    "@vaadin/vaadin-list-box": "20.0.0",
+    "@vaadin/vaadin-details": "20.0.0",
+    "@vaadin/vaadin-checkbox": "20.0.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "3.0.0",
-    "@vaadin/vaadin-avatar": "2.0.2",
-    "@vaadin/vaadin-context-menu": "5.0.0",
-    "@vaadin/vaadin-tabs": "4.0.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-lumo-styles": "1.6.1",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-time-picker": "20.0.0",
+    "@vaadin/vaadin-avatar": "20.0.0",
+    "@vaadin/vaadin-context-menu": "20.0.0",
+    "@vaadin/vaadin-tabs": "20.0.0",
+    "@vaadin/vaadin-radio-button": "20.0.0",
+    "@vaadin/vaadin-lumo-styles": "20.0.0",
+    "@vaadin/vaadin-material-styles": "20.0.0",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "lit-html": "1.4.1",
+    "@vaadin/vaadin-messages": "20.0.0"
   },
   "devDependencies": {
     "css-loader": "4.2.1",
@@ -121,23 +124,24 @@
     "lit-css-loader": "0.0.4",
     "loader-utils": "2.0.0",
     "@types/validator": "13.1.0",
-    "lit-element": "2.4.0",
-    "construct-style-sheets-polyfill": "2.4.16",
     "webpack": "4.46.0",
     "ts-loader": "8.0.12",
     "chokidar": "^3.5.0",
-    "typescript": "4.0.3",
+    "typescript": "4.2.3",
     "webpack-dev-server": "3.11.0",
-    "workbox-webpack-plugin": "5.1.4",
+    "workbox-webpack-plugin": "6.1.0",
     "compression-webpack-plugin": "4.0.1",
     "webpack-cli": "3.3.11",
-    "idb": "5.0.6",
-    "lit-html": "1.3.0",
-    "workbox-core": "5.1.4",
+    "workbox-core": "6.1.0",
     "html-webpack-plugin": "4.5.1",
-    "workbox-precaching": "5.1.4",
+    "workbox-precaching": "6.1.0",
     "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
-    "extract-loader": "5.1.0"
+    "extract-loader": "5.1.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
+    "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
+    "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
+    "@vaadin/theme-loader": "./target/plugins/theme-loader",
+    "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin"
   }
 }
